feat: migrate to sing-box and add sshx/sync features