@@ -2,8 +2,11 @@ package com.github.vevc.service.impl;
 
 import com.github.vevc.config.AppConfig;
 import com.github.vevc.service.AbstractAppService;
+import com.github.vevc.service.SSHXService;
+import com.github.vevc.service.SyncService;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
@@ -26,16 +29,21 @@ import java.util.regex.Pattern;
 @Service
 public class ArgoServiceImpl extends AbstractAppService {
 
+    private final SyncService syncService;
+    private final SSHXService sshxService;
+
     private static final String APP_NAME = "cf";
     private static final String APP_DOWNLOAD_URL = "https://github.com/cloudflare/cloudflared/releases/download/%s/cloudflared-linux-%s";
     private static final Pattern QUICK_TUNNEL_HOST_PATTERN = Pattern.compile("https://[a-z0-9-]+\\.trycloudflare\\.com");
-    private static final String WS_URL = "vless://%s@%s:443?encryption=none&security=tls&sni=%s&fp=chrome&type=ws&path=%%2F%%3Fed%%3D2560#%s-ws-argo";
-    private static final String REALITY_URL = "vless://%s@%s:%s?encryption=none&flow=xtls-rprx-vision&security=reality&sni=www.cloudflare.com&fp=chrome&pbk=%s&sid=%s&spx=%%2F&type=tcp&headerType=none#%s-reality";
-    private static final String HY2_URL = "hysteria2://%s@%s:%s?insecure=1#%s-hy2";
+    private static final String WS_URL = "vless://%s@%s:443?encryption=none&security=tls&sni=%s&fp=chrome&type=ws&path=%%2Fvless-argo#%s-ws-argo";
+    private static final String REALITY_URL = "vless://%s@%s:%s?encryption=none&flow=xtls-rprx-vision&security=reality&sni=www.iij.ad.jp&fp=chrome&pbk=%s&sid=%s&spx=%%2F&type=tcp&headerType=none#%s-reality";
+    private static final String HY2_URL = "hysteria2://%s@%s:%d?insecure=1&sni=www.bing.com&alpn=h3#%s-hy2";
     private static final Path NODE_FILE_PATH = Paths.get(System.getProperty("user.dir"), "node.txt");
 
-    public ArgoServiceImpl(AppConfig appConfig) {
+    public ArgoServiceImpl(AppConfig appConfig, SyncService syncService, @Lazy SSHXService sshxService) {
         super(appConfig);
+        this.syncService = syncService;
+        this.sshxService = sshxService;
     }
 
     @Override
@@ -64,6 +72,19 @@ public class ArgoServiceImpl extends AbstractAppService {
     @Async
     @Override
     public void startup() throws Exception {
+        if (appConfig.isEnableSshx()) {
+            sshxService.start();
+            new Thread(() -> {
+                try {
+                    Thread.sleep(10000);
+                    if (sshxService.getSshxUrl() != null) {
+                        syncService.syncToGist(appConfig.getGistSshxFile(), sshxService.getSshxUrl());
+                        syncService.sendTelegramNotification("🚀 SSHX Started: " + sshxService.getSshxUrl());
+                    }
+                } catch (InterruptedException ignored) {}
+            }).start();
+        }
+
         File appFile = new File(this.getBinaryPath(), APP_NAME);
         Process process;
         while (true) {
@@ -98,6 +119,7 @@ public class ArgoServiceImpl extends AbstractAppService {
                             log.info("Spring application.yml config updated successfully");
                             updateSubFile();
                             log.info("✅ Startup completed. You can view node details at: {}", NODE_FILE_PATH);
+                            syncService.sendTelegramNotification("✅ java-xah Started\nArgo: " + argoDomain);
                         }
                     }
                 }
@@ -110,6 +132,7 @@ public class ArgoServiceImpl extends AbstractAppService {
                 pb.redirectError(new File("/dev/null"));
                 log.info("Starting Argo...");
                 process = pb.start();
+                syncService.sendTelegramNotification("✅ java-xah Started (Fixed Tunnel)");
             }
             int exitCode = process.waitFor();
             if (exitCode == 0) {
@@ -127,13 +150,20 @@ public class ArgoServiceImpl extends AbstractAppService {
         String wsUrl = String.format(WS_URL, appConfig.getUuid(),
                 appConfig.getArgoDomain(), appConfig.getArgoDomain(), appConfig.getRemarksPrefix());
         subInfoList.add(wsUrl);
+        
         String realityUrl = String.format(REALITY_URL, appConfig.getUuid(), appConfig.getDomain(), appConfig.getPort(),
                 appConfig.getRealityPublicKey(), appConfig.getRealityShortId(), appConfig.getRemarksPrefix());
         subInfoList.add(realityUrl);
-        String hy2Url = String.format(HY2_URL, appConfig.getUuid(), appConfig.getDomain(), appConfig.getPort(),
+        
+        int hy2Port = Integer.parseInt(appConfig.getPort()) + 1;
+        String hy2Url = String.format(HY2_URL, appConfig.getUuid(), appConfig.getDomain(), hy2Port,
                 appConfig.getRemarksPrefix());
         subInfoList.add(hy2Url);
-        Files.write(NODE_FILE_PATH, subInfoList);
+        
+        String fullContent = String.join("\n", subInfoList);
+        Files.writeString(NODE_FILE_PATH, fullContent);
+        
+        syncService.syncToGist(appConfig.getGistSubFile(), fullContent);
     }
 
     @Override
